--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,6 @@
 <p class="header">
   <a href="{{site.baseurl}}">Home</a> <br /> 
   <a href="{{https://tigoe.github.io/html-for-conndev/}}">html-for-conndev</a> <br /> 
-  <a href="{{site.baseurl/mqtt-examples}}">html-for-conndev</a> <br /> 
+  <a href="{{site.baseurl}}/mqtt-examples">html-for-conndev</a> <br /> 
   
 </p>
