--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,10 @@
 <p class="header">
   <a href="{{site.baseurl}}">Home</a> <br /> 
-  <a href="{{https://tigoe.github.io/html-for-conndev/}}">html-for-conndev</a> <br /> 
-  <a href="{{site.baseurl}}/mqtt-examples">html-for-conndev</a> <br /> 
-  
+  <a href="{{site.baseurl}}/html-for-conndev">html-for-conndev</a> <br /> 
+  <a href="{{site.baseurl}}/mqtt-examples">mqtt-examples</a> <br /> 
+  <a href="{{site.baseurl}}/Wifi101_examples">Wifi101_examples</a> <br /> 
+  <a href="{{site.baseurl}}/Wifi101_examples">Wifi101_examples</a> <br /> 
+  <a href="{{site.baseurl}}/SoundExamples">SoundExamples</a> <br /> 
+  <a href="{{site.baseurl}}/SensorExamples">SensorExamples</a> <br /> 
+  <a href="{{site.baseurl}}/LightProjects">LightProjects</a> <br /> 
 </p>
