--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,4 +15,6 @@
   <a href="{{site.baseurl}}/PiRecipes">Raspberry Pi Recipes</a> <br /> 
   <a href="{{site.baseurl}}/NodeExamples">Node.js Server and Client Examples</a> <br /> 
   <a href="https://github.com/tigoe/BluetoothLE-Examples">Bluetooth LE Examples</a> <br /> 
+  <a href="https://itpnyu.github.io/clock-club">Clock Club</a> <br /> 
+
 </p>
