--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,10 +11,10 @@
   <a href="{{site.baseurl}}/display-examples">Arduino Display Examples</a> <br /> 
   <a href="{{site.baseurl}}/LightProjects">Light Projects</a> <br /> 
   <a href="{{site.baseurl}}/hue-control">Philips Hue Control</a> <br /> 
-  <a href="{{site.baseurl}}/Dmx-Examples">DMX-512 Examples</a> <br /> 
+  <a href="{{site.baseurl}}/DMX-Examples">DMX-512 Examples</a> <br /> 
   <a href="{{site.baseurl}}/PiRecipes">Raspberry Pi Recipes</a> <br /> 
   <a href="{{site.baseurl}}/NodeExamples">Node.js Server and Client Examples</a> <br /> 
-  <a href="https://github.com/tigoe/BluetoothLE-Examples">Bluetooth LE Examples</a> <br /> 
+  <a href="{{site.baseurl}}/BluetoothLE-Examples">Bluetooth LE Examples</a> <br /> 
   <a href="https://itpnyu.github.io/clock-club">Clock Club</a> <br /> 
 
 </p>
