--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,6 +1,4 @@
-<p class="header">
-  <a href="{{site.baseurl}}">Home</a> <br /> 
-</p>
+<!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
 <p>Search my gitHub account:
   <input type="text" id="searchbox" onchange="search();" target="_blank">
@@ -17,3 +15,5 @@
       mySearchLink.click();
     }
   </script> 
+
+<!-- end custom head snippets -->
