--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,6 +1,6 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
-<p>Search my gitHub account:
+<p>Search my gitHub account:<br />
   <input type="text" id="searchbox" onchange="search();" target="_blank">
   <a href="" id="searcher" class="button">search</a>
 </p>
